--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Help</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <title>Omizu | Home</title>
+    <link rel="icon" type="image/png" href="/images/favicon.png"/>
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
