--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Home</title>
-    <link rel="icon" type="image/png" href="/images/favicon.png"/>
+    <link rel="icon" type="image/png" href="/img/favicon.png"/>
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
