--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Help</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.ico" />
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
