--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Home</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
