--- a/help.html
+++ b/help.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Help</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
@@ -36,11 +36,13 @@
     <div class="head">
       <img src="" alt="">
       <h1 class="h1">Need help? Feel free to contact us!</h1>
-      <p class="pn">Phone Number: <a href="tel:+60165206881">+6016-5206881</a></p>
-      <p class="pns">Office Number:<a href="tel:+6055455299:">+605-5455299</a></p>
-      <p class="e">Email: <a href="mailto:omizuip@gmail.com">omizuip@gmail.com</a></p>
-      <a href="https://wa.me/60165206881"><img src="img/whatsapplogo.png" alt="" class="wsl"></a>
-      <hr class="lineone">
+      <div class="contact">
+        <p>Address: 42 A, Jalan Sci 1/11, Sunway City,<br> 31150 Ipoh,<br> Negeri Perak</p>
+        <p class="pn">Phone Number: <a href="tel:+60165206881">+6016-5206881</a></p>
+        <p class="pns">Office Number:<a href="tel:+6055455299:">+605-5455299</a></p>
+        <p class="e">Email: <a href="mailto:omizuip@gmail.com">omizuip@gmail.com</a></p>
+        <a href="https://wa.me/60165206881"><img src="img/whatsapplogo.png" alt="" class="wsl"></a>
+      </div>
       <div class="map-responsive">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15907.175056803799!2d101.1528993!3d4.6308504!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x952ec6e92b17e8b2!2sOmizu+SDN+BHD!5e0!3m2!1sen!2smy!4v1553583374155" width="600"
           height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
