--- a/help.html
+++ b/help.html
@@ -93,7 +93,7 @@
 
   function cNav() {
     msnav.style.width = "0";
-    msnav.style.height = "0"
+    msnav.style.height = "110%"
     snava.style.display = "none";
     document.body.style.overflow = "auto";
   }
