--- a/help.html
+++ b/help.html
@@ -37,10 +37,10 @@
       <img src="" alt="">
         <h1 class="h1">Need help? Feel free to contact us!</h1>
       <div class="contact">
-        <p>Address: 42 A, Jalan Sci 1/11, Sunway City,<br> 31150 Ipoh,<br> Negeri Perak</p>
-        <p class="pn">Phone Number: <a href="tel:+60165206881">+6016-5206881</a></p>
-        <p class="pns">Office Number:<a href="tel:+6055455299:">+605-5455299</a></p>
-        <p class="e">Email: <a href="mailto:omizuip@gmail.com">omizuip@gmail.com</a></p>
+        <p>Address: 42 A, Jalan Sci 1/11,<br> Sunway City,<br> 31150 Ipoh,<br> Negeri Perak</p>
+        <p class="pn">Phone Number: <br><a href="tel:+60165206881">+6016-5206881</a></p>
+        <p class="pns">Office Number:<br><a href="tel:+6055455299:">+605-5455299</a></p>
+        <p class="e">Email: <br><a href="mailto:omizuip@gmail.com">omizuip@gmail.com</a></p>
         <a href="https://wa.me/60165206881"><img src="img/whatsapplogo.png" alt="" class="wsl"></a>
       </div>
       <div class="map-responsive">
