Body acu pro II page done
v5.0

--- a/bapII.html
+++ b/bapII.html
@@ -33,14 +33,37 @@
 
   <body>
     <div class="head">
-      <div class="pic">
-        <img class="bapllon2" src="img/bapllon.png" alt="">
+      <div class="sec1">
+          <img class="bapllon2" src="img/bapllon.png" alt="">
+          <h1>Body Acu-Pro II</h1>
+          <p>Introducing Body Acu-Pro II....</p>
+            <a href="https://bit.ly/acuproII"><button class="co">Check out!</button></a>
       </div>
-      <div class="title">
-        <h1>Body Acu-Pro II</h1>
-        <p>Introducing Body Acu-Pro II....</p>
-          <a href="product.html"><button class="co">Check out!</button></a>
+      <div class="sec2">
+        <div class="left">
+          <img src="img/bapll_top.png" alt="">
+          <br>
+          <p class="">Dual output channel</p>
+        </div>
+        <div class="right">
+          <img src="img/bapllscreen.png" alt="">
+          <br>
+          <p>Six different mode & 4 different auto mode</p>
+        </div>
       </div>
+      <div class="bk"></div>
+      <div class="sec3">
+        <h3>Specification</h3>
+        <h4>Power: <br>
+           Frequency: <br>
+           Battery Capacity: <br>
+            Size:</h4>
+            <p>DC3.7V <br>
+            1~250Hz <br>
+            500Mah <br>
+            139*68*20.5mm</p>
+      </div>
+      <div class="bk"></div>
     </div>
   </body>
 
