img compress test
v5.1.9

--- a/bapII.html
+++ b/bapII.html
@@ -34,7 +34,7 @@
   <body>
     <div class="head">
       <div class="sec1">
-          <img class="bapllon2" src="img/bapllon.png" alt="">
+          <img class="bapllon2" src="img/bapllon-min.png" alt="">
           <h1>Body Acu-Pro II</h1>
           <p>Introducing Body Acu-Pro II....</p>
             <a href="https://bit.ly/acuproII"><button class="co">Check out!</button></a>
