--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,11 @@
         <a class="alg" href="index.html"><img class="logo" src="img/omizu-logo.jpg" alt=""></a>
         <li><a id="a" class="cu" href="index.html">Home</a></li>
         <li><a id="b" href="aboutus.html">About Us</a></li>
-        <li><a id="c" href="product.html">Product</a></li>
+        <li><a id="c" href="#">Product <i class="arrow down"></i></a>
+          <ul>
+            <li><a href="bapII.html">Body Acu-Pro II</a></li>
+          </ul>
+      </li>
         <li><a id="d" href="help.html">Help</a></li>
       </ul>
     </nav>
