--- a/bapII.html
+++ b/bapII.html
@@ -15,7 +15,11 @@
         <a class="alg" href="index.html"><img class="logo" src="img/omizu-logo.jpg" alt=""></a>
         <li><a id="a" class="cu" href="index.html">Home</a></li>
         <li><a id="b" href="aboutus.html">About Us</a></li>
-        <li><a id="c" href="product.html">Product</a></li>
+        <li><a id="c" href="#">Product <i class="arrow down"></i></a>
+            <ul>
+              <li><a href="bapII.html">Body Acu-Pro II</a></li>
+            </ul>
+        </li>
         <li><a id="d" href="help.html">Help</a></li>
       </ul>
     </nav>
@@ -36,10 +40,14 @@
       <div class="sec1">
           <img class="bapllon2" src="img/bapllon-min.png" alt="">
           <h1>Body Acu-Pro II</h1>
-          <p>Introducing Body Acu-Pro II....</p>
+          <p>Introducing Body Acu-Pro II. <br> The most durable acupuncture ever sold by Omizu.</p>
             <a href="https://bit.ly/acuproII"><button class="co">Check out!</button></a>
       </div>
       <div class="sec2">
+        <h1>Rechargeable battery?</h1>
+        <h3>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone!</h3>
+      </div>
+      <div class="sec3">
         <div class="left">
           <img src="img/bapll_top.png" alt="">
           <br>
@@ -52,7 +60,7 @@
         </div>
       </div>
       <div class="bk"></div>
-      <div class="sec3">
+      <div class="sec4">
         <h3>Specification</h3>
         <h4>Power: <br>
            Frequency: <br>
