--- a/bapII.html
+++ b/bapII.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Body Acu-Pro II</title>
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/bapll.css">
   </head>
   <header>
-    <link rel="stylesheet" type="text/css" href="css/bapll.css">
     <nav id="navbar">
       <span onclick="openNav()">&#9776;</span>
       <ul>
@@ -41,11 +41,11 @@
           <img class="bapllon2" src="img/bapllon-min.png" alt="">
           <h1>Body Acu-Pro II</h1>
           <p>Introducing Body Acu-Pro II. <br> The most durable acupuncture ever sold by Omizu.</p>
-            <a href="https://bit.ly/acuproII"><button class="co">Check out!</button></a>
+            <a href="https://bit.ly/acuproII"><button class="co">Buy it now!</button></a>
       </div>
       <div class="sec2">
         <h1>Rechargeable battery?</h1>
-        <h3>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone!</h3>
+        <h3>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone with micro-usb!</micro-usb></h3>
       </div>
       <div class="sec3">
         <div class="left">
