--- a/help.html
+++ b/help.html
@@ -1,9 +1,8 @@
 <!Doctype html>
 <html>
-<div id="container">
-
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omizu | Help</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
@@ -20,7 +19,7 @@
       </ul>
     </nav>
   </header>
-
+<div id="container">
   <div id="msnav" class="snav">
     <div id="snava">
       <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" class="x"></a>
