--- a/aboutus.html
+++ b/aboutus.html
@@ -18,6 +18,8 @@
         <li><a id="c" href="#">Product <i class="arrow down"></i></a>
           <ul>
             <li><a href="bapII.html">Body Acu-Pro II</a></li>
+            <li><a href="#">Product 2</a></li>
+            <li><a href="#">Product 3</a></li>
           </ul>
       </li>
         <li><a id="d" href="help.html">Help</a></li>
