--- a/bapII.html
+++ b/bapII.html
@@ -42,8 +42,12 @@
       <div class="sec1">
           <img class="bapllon2" src="img/bapllon-min.png" alt="">
           <h1>Body Acu-Pro II</h1>
-          <p>Introducing Body Acu-Pro II. <br> The most durable acupuncture ever sold by Omizu.</p>
+          <p>Body Acupuncture-Pro II is a traditional massage but packed inside a small portable device and it is also the most durable acupuncture ever sold by Omizu.</p>
             <a href="https://bit.ly/acuproII"><button class="co">Buy it now!</button></a>
+      </div>
+      <div class="sec5">
+        <h1>But why use acupuncture?</h1>
+        <p>Because it can improve your sleep quality. <br>Eliminate physical fatigue caused by work. <br>Cleaning meridian and relax your muscle and joint. <br>Relieve pain and enchane your immune system. <br> Improve your blood circulations.</p>
       </div>
       <div class="sec2">
         <h1>Rechargeable battery?</h1>
