--- a/bapII.html
+++ b/bapII.html
@@ -43,15 +43,16 @@
           <img class="bapllon2" src="img/bapllon-min.png" alt="">
           <h1>Body Acu-Pro II</h1>
           <p>Body Acupuncture-Pro II is a traditional massage but packed inside a small portable device and it is also the most durable acupuncture ever sold by Omizu.</p>
-            <a href="https://bit.ly/acuproII"><button class="co">Buy it now!</button></a>
+            <a href="https://bit.ly/acuproII" target="_blank"><button class="co">Buy it now!</button></a>
       </div>
       <div class="sec5">
-        <h1>But why use acupuncture?</h1>
-        <p>Because it can improve your sleep quality. <br>Eliminate physical fatigue caused by work. <br>Cleaning meridian and relax your muscle and joint. <br>Relieve pain and enchane your immune system. <br> Improve your blood circulations.</p>
+        <h1 class="t1">But why use Body Acu-Pro II?</h1>
+        <p class="t1">Because it can improve your sleep quality. <br>Eliminate physical fatigue caused by work. <br>Cleaning meridian and relax your muscle and joint. <br>Relieve pain and enchane your immune system. <br> Improve your blood circulations.</p>
+        <img src="img/bg.jpg" alt="">
       </div>
       <div class="sec2">
         <h1>Rechargeable battery?</h1>
-        <h3>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone with micro-usb!</micro-usb></h3>
+        <p>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone with micro-usb!</micro-usb></h3>
       </div>
       <div class="sec3">
         <div class="left">
