--- a/bapII.html
+++ b/bapII.html
@@ -18,8 +18,11 @@
         <li><a id="c" href="#">Product <i class="arrow down"></i></a>
             <ul>
               <li><a href="bapII.html">Body Acu-Pro II</a></li>
-              <li><a href="#">Product 2</a></li>
-              <li><a href="#">Product 3</a></li>
+              <li><a href="#">Home Therapy</a></li>
+              <li><a href="#">Infared Lamp</a></li><br>
+              <li><a href="#">Hot Cold Wrap</a></li>
+              <li><a href="#">Blood Pressure Monitor</a></li>
+              <li><a href="#">Oshinizu</a></li>
             </ul>
         </li>
         <li><a id="d" href="help.html">Help</a></li>
@@ -55,16 +58,23 @@
         <p>Like most smartphone it include lithium-ion rechargeable battery! <br> And charge it like a phone with micro-usb!</micro-usb></h3>
       </div>
       <div class="sec3">
-        <div class="left">
           <img src="img/bapll_top.png" alt="">
           <br>
           <p class="">Dual output channel</p>
-        </div>
-        <div class="right">
-          <img src="img/bapllscreen.png" alt="">
-          <br>
-          <p>Six different mode & 4 different auto mode</p>
-        </div>
+      </div>
+      <div class="sec6">
+        <img src="img/hmr.jpg"  alt="">
+        <img src="img/acp.jpg"  alt="">
+        <img src="img/npy.jpg"  alt="">
+        <img src="img/cup.jpg"  alt="">
+        <img src="img/scp.jpg"  alt="">
+        <img src="img/msg.jpg"  alt=""><br>
+        <p class="hmr">Mode 1</p>
+        <p class="acp">Mode 2</p>
+        <p class="npy">Mode 3</p>
+        <p class="cup">Mode 4</p>
+        <p class="scp">Mode 5</p>
+        <p class="msg">Mode 6</p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
