--- a/bapII.html
+++ b/bapII.html
@@ -44,7 +44,7 @@
     <div class="head">
       <div class="sec1">
           <h1>Body Acu-Pro II</h1>
-          <p>Body Acupuncture-Pro II is a traditional massage but packed inside a small portable device and it is also the most durable acupuncture ever sold by Omizu.</p>
+          <p>Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques. <br><br> Body Acu-Pro II bring tranditinal massage available on the go in such a compact device.</p>
           <img src="img/bapllon-min.png" alt="">
       </div>
       <div class="bk">
