--- a/bapII.html
+++ b/bapII.html
@@ -5,6 +5,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Body Acu-Pro II</title>
+    <meta name="Description" content="Body Acupuncture-Pro II is a new generation of healt care product. It combines theories of Chinese therapeutic treatments and modern technology to produce a massage experience for the user. It can produce 6 different traditional massage techniques.">
+    <meta name="Keywords" content="Omizu, health, health care, acupuncture, Malaysia, massage, compact device">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/bapll.css">
   </head>
