--- a/help.html
+++ b/help.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omizu | Help</title>
+    <meta name="Description" content="Need our help? Just contact us!">
+    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location">
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
   <header>
