--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Home</title>
+    <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
+    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
