--- a/help.html
+++ b/help.html
@@ -6,7 +6,7 @@
     <title>Omizu | Help</title>
     <meta name="Description" content="Need our help? Just contact us!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
     <link rel="stylesheet" type="text/css" href="css/help.css">
