Google tracking update

--- a/aboutus.html
+++ b/aboutus.html
@@ -3,6 +3,7 @@
 <div id="container">
 
   <head>
+    <script src="js/gtag.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Help</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
