--- a/help.html
+++ b/help.html
@@ -1,6 +1,7 @@
 <!Doctype html>
 <html>
   <head>
+    <script src="js/gtag.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omizu | Help</title>
