--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <div id="container">
 
   <head>
+    <script src="js/gtag.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Home</title>
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
