--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Help</title>
+    <title>Omizu | About us</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
   <header>
