--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,11 @@
 <!Doctype html>
-<html>
+<html lang="en">
 <div id="container">
 
   <head>
     <script src="js/gtag.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Help</title>
+    <title>Omizu | About us</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   </head>
   <header>
