--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!Doctype html>
-<html>
+<html lang="en">
 <div id="container">
 
   <head>
-    <script src="js/gtag.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Home</title>
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
@@ -30,10 +29,10 @@
 
   <div id="msnav" class="snav">
     <div id="snava">
-      <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" class="x"></a>
+      <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
       <a class="home" href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
-      <a href="product.html">Product</a>
+      <a href="#" style="background-color: #ff7d7d;">Product</a>
       <a href="help.html">Help</a>
     </div>
   </div>
