--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <div id="container">
 
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170457967-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+       gtag('js', new Date());
+
+       gtag('config', 'UA-170457967-1');
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu | Home</title>
+    <title>Omizu | Health Care | Acupuncture | Sauna</title>
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
     <link rel="shortcut icon" href="favicon.ico">
