--- a/help.html
+++ b/help.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Omizu Customer Services | Whatsapp | Call us</title>
     <meta name="Description" content="Need our help? Just contact us! We accept whatsapp or you can call us!">
-    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location">
+    <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia, contact us, help, google map, location, customer services">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
@@ -40,7 +40,7 @@
       <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
       <a class="home" href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
-      <a href="product.html">Product</a>
+      <a href="#" style="background-color: #ff7d7d;">Product</a>
       <a href="help.html">Help</a>
     </div>
 
@@ -48,15 +48,13 @@
 
   <body>
     <div class="head">
+      <div class="sec1">
         <h1 class="h1">Need help? Feel free to contact us!</h1>
-      <div class="contact">
-        <p>Address: 42 A, Jalan Sci 1/11,<br> Sunway City,<br> 31150 Ipoh,<br> Negeri Perak</p>
+        <p class="add">Address: 42 A, Jalan Sci 1/11,<br> Sunway City,<br> 31150 Ipoh,<br> Negeri Perak</p>
         <p class="pn">Phone Number: <br><a href="tel:+60165206881">+6016-5206881</a></p>
         <p class="pns">Office Number:<br><a href="tel:+6055455299:">+605-5455299</a></p>
         <p class="e">Email: <br><a href="mailto:omizuip@gmail.com">omizuip@gmail.com</a></p>
-        <a href="https://wa.me/60165206881"><img src="img/whatsapplogo.png" alt="whatsapp logo" class="wsl"></a>
-      </div>
-      <div class="map-responsive">
+        <a href="https://wa.me/60165206881" target="_blank"><img src="img/whatsapplogo.png" alt="whatsapp logo" class="wsl"></a><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15907.175056803799!2d101.1528993!3d4.6308504!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x952ec6e92b17e8b2!2sOmizu+SDN+BHD!5e0!3m2!1sen!2smy!4v1553583374155" width="1000"
           height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
