Fixes broken link

--- a/bapII.html
+++ b/bapII.html
@@ -41,7 +41,7 @@
       <a id="close" href="javascript:void(0)" class="close" onclick="cNav()"><img src="img/x.png" alt="X" class="x"></a>
       <a class="home" href="index.html">Home</a>
       <a href="aboutus.html">About Us</a>
-      <a href="product.html">Product</a>
+      <a href="#" style="background-color: #ff7d7d;">Product</a>
       <a href="help.html">Help</a>
     </div>
   </div>
