--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Omizu | Home</title>
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
+    <meta property="og:type" content="company">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="omizu.netlify.app">
+    <meta property="og:title" content="Omizu Health is our number one priority!">
+    <meta property="og:description" content="We sell health care product in Malaysia.">
+    <meta property="og:site_name" content="Omizu">
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <header>
