--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
        gtag('config', 'UA-170457967-1');
     </script>
+    <meta name="google-site-verification" content="_uLg0q1l6xeYxQnNBS5SoouF6xTDTOJh5VqP0VUpKMw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Health Care | Acupuncture | Sauna</title>
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
