--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="google-site-verification" content="_uLg0q1l6xeYxQnNBS5SoouF6xTDTOJh5VqP0VUpKMw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omizu | Health Care | Acupuncture | Sauna</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
     <meta name="Keywords" content="Omizu, health, health care, acupuncture, sauna, Malaysia">
     <meta property="og:type" content="company">
