--- a/ht.html
+++ b/ht.html
@@ -72,7 +72,7 @@
     <div class="head">
       <div class="sec1">
           <h1>Omizu Home Therapy</h1>
-          <p>With Omizu Home Therapy now you can use a sauna at home without going outsite! You can also use it with <a href="ch.html">herbs</a> and other beauty products!</p>
+          <p>With Omizu Home Therapy now you can use a Home Therapy at home without going outsite! You can also use it with <a href="ch.html">herbs</a> and other beauty products!</p>
           <img src="img/ht.png" alt="Omizu Home Therapy">
       </div>
       <div class="bk">
